--- a/Bogotá's household survey/ConstructionVariables_Bog.ipynb
+++ b/Bogotá's household survey/ConstructionVariables_Bog.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "8d09c52d",
+   "id": "8ebde8db",
    "metadata": {},
    "source": [
     "# Analysis of Bogotá's household data"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "8cf8e08c",
+   "id": "3ed13cb3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "11f617ac",
+   "id": "c83cecd8",
    "metadata": {},
    "source": [
     "## Catastro"
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "5dfaa5b5",
+   "id": "1a1e1e01",
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +55,405 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "6f5988ef",
+   "id": "6ac549f8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>OBJECTID</th>\n",
+       "      <th>PreCBarrio</th>\n",
+       "      <th>PreNBarrio</th>\n",
+       "      <th>PreCManz</th>\n",
+       "      <th>PreCPredio</th>\n",
+       "      <th>PreCCons</th>\n",
+       "      <th>PreCResto</th>\n",
+       "      <th>PreChip</th>\n",
+       "      <th>PreCedCata</th>\n",
+       "      <th>PreNupre</th>\n",
+       "      <th>...</th>\n",
+       "      <th>PreBMobili</th>\n",
+       "      <th>PreBCons</th>\n",
+       "      <th>PreCTamano</th>\n",
+       "      <th>PreCEnchap</th>\n",
+       "      <th>PreCMobili</th>\n",
+       "      <th>PreCConse</th>\n",
+       "      <th>PreCIndus</th>\n",
+       "      <th>PreACercha</th>\n",
+       "      <th>PreClCons</th>\n",
+       "      <th>Barmanpre</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>4405</td>\n",
+       "      <td>OSPINA PEREZ SUR</td>\n",
+       "      <td>47</td>\n",
+       "      <td>9</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>AAA0039RSOM</td>\n",
+       "      <td>004405470900000000</td>\n",
+       "      <td>110010144160500470009000000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>R</td>\n",
+       "      <td>4405047009</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>4405</td>\n",
+       "      <td>OSPINA PEREZ SUR</td>\n",
+       "      <td>48</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>AAA0039RSPA</td>\n",
+       "      <td>43S 46 40</td>\n",
+       "      <td>110010144160500480001000000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>332.0</td>\n",
+       "      <td>341.0</td>\n",
+       "      <td>412.0</td>\n",
+       "      <td>424.0</td>\n",
+       "      <td>432.0</td>\n",
+       "      <td>441.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>R</td>\n",
+       "      <td>4405048001</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>4405</td>\n",
+       "      <td>OSPINA PEREZ SUR</td>\n",
+       "      <td>48</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>AAA0039RSPA</td>\n",
+       "      <td>43S 46 40</td>\n",
+       "      <td>110010144160500480001000000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>332.0</td>\n",
+       "      <td>341.0</td>\n",
+       "      <td>412.0</td>\n",
+       "      <td>424.0</td>\n",
+       "      <td>432.0</td>\n",
+       "      <td>441.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>R</td>\n",
+       "      <td>4405048001</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>4405</td>\n",
+       "      <td>OSPINA PEREZ SUR</td>\n",
+       "      <td>48</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>AAA0039RSPA</td>\n",
+       "      <td>43S 46 40</td>\n",
+       "      <td>110010144160500480001000000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>332.0</td>\n",
+       "      <td>341.0</td>\n",
+       "      <td>412.0</td>\n",
+       "      <td>424.0</td>\n",
+       "      <td>432.0</td>\n",
+       "      <td>441.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>R</td>\n",
+       "      <td>4405048001</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>4405</td>\n",
+       "      <td>OSPINA PEREZ SUR</td>\n",
+       "      <td>48</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>AAA0039RSPA</td>\n",
+       "      <td>43S 46 40</td>\n",
+       "      <td>110010144160500480001000000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>332.0</td>\n",
+       "      <td>341.0</td>\n",
+       "      <td>412.0</td>\n",
+       "      <td>424.0</td>\n",
+       "      <td>432.0</td>\n",
+       "      <td>441.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>R</td>\n",
+       "      <td>4405048001</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3531714</th>\n",
+       "      <td>3531715</td>\n",
+       "      <td>8503</td>\n",
+       "      <td>SANTA TERESA</td>\n",
+       "      <td>2</td>\n",
+       "      <td>26</td>\n",
+       "      <td>1</td>\n",
+       "      <td>7012</td>\n",
+       "      <td>AAA0158WCPP</td>\n",
+       "      <td>008503022600107012</td>\n",
+       "      <td>110010185010300020026901070012</td>\n",
+       "      <td>...</td>\n",
+       "      <td>332.0</td>\n",
+       "      <td>342.0</td>\n",
+       "      <td>412.0</td>\n",
+       "      <td>424.0</td>\n",
+       "      <td>432.0</td>\n",
+       "      <td>442.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>R</td>\n",
+       "      <td>8503002026</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3531715</th>\n",
+       "      <td>3531716</td>\n",
+       "      <td>8503</td>\n",
+       "      <td>SANTA TERESA</td>\n",
+       "      <td>2</td>\n",
+       "      <td>26</td>\n",
+       "      <td>1</td>\n",
+       "      <td>8001</td>\n",
+       "      <td>AAA0158WCRU</td>\n",
+       "      <td>008503022600108001</td>\n",
+       "      <td>110010185010300020026901080001</td>\n",
+       "      <td>...</td>\n",
+       "      <td>332.0</td>\n",
+       "      <td>342.0</td>\n",
+       "      <td>412.0</td>\n",
+       "      <td>424.0</td>\n",
+       "      <td>432.0</td>\n",
+       "      <td>442.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>R</td>\n",
+       "      <td>8503002026</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3531716</th>\n",
+       "      <td>3531717</td>\n",
+       "      <td>8503</td>\n",
+       "      <td>SANTA TERESA</td>\n",
+       "      <td>2</td>\n",
+       "      <td>26</td>\n",
+       "      <td>1</td>\n",
+       "      <td>8002</td>\n",
+       "      <td>AAA0158WCSK</td>\n",
+       "      <td>008503022600108002</td>\n",
+       "      <td>110010185010300020026901080002</td>\n",
+       "      <td>...</td>\n",
+       "      <td>332.0</td>\n",
+       "      <td>342.0</td>\n",
+       "      <td>412.0</td>\n",
+       "      <td>424.0</td>\n",
+       "      <td>432.0</td>\n",
+       "      <td>442.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>R</td>\n",
+       "      <td>8503002026</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3531717</th>\n",
+       "      <td>3531718</td>\n",
+       "      <td>8503</td>\n",
+       "      <td>SANTA TERESA</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>8</td>\n",
+       "      <td>2004</td>\n",
+       "      <td>AAA0108FLZE</td>\n",
+       "      <td>168 27 9 297</td>\n",
+       "      <td>110010185010300010005908020004</td>\n",
+       "      <td>...</td>\n",
+       "      <td>332.0</td>\n",
+       "      <td>342.0</td>\n",
+       "      <td>412.0</td>\n",
+       "      <td>423.0</td>\n",
+       "      <td>433.0</td>\n",
+       "      <td>442.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>R</td>\n",
+       "      <td>8503001005</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3531718</th>\n",
+       "      <td>3531719</td>\n",
+       "      <td>8503</td>\n",
+       "      <td>SANTA TERESA</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>8</td>\n",
+       "      <td>3001</td>\n",
+       "      <td>AAA0108FMAF</td>\n",
+       "      <td>168 27 9 330</td>\n",
+       "      <td>110010185010300010005908030001</td>\n",
+       "      <td>...</td>\n",
+       "      <td>332.0</td>\n",
+       "      <td>342.0</td>\n",
+       "      <td>412.0</td>\n",
+       "      <td>423.0</td>\n",
+       "      <td>433.0</td>\n",
+       "      <td>442.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>R</td>\n",
+       "      <td>8503001005</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3531719 rows × 52 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         OBJECTID  PreCBarrio        PreNBarrio  PreCManz  PreCPredio  \\\n",
+       "0               1        4405  OSPINA PEREZ SUR        47           9   \n",
+       "1               2        4405  OSPINA PEREZ SUR        48           1   \n",
+       "2               3        4405  OSPINA PEREZ SUR        48           1   \n",
+       "3               4        4405  OSPINA PEREZ SUR        48           1   \n",
+       "4               5        4405  OSPINA PEREZ SUR        48           1   \n",
+       "...           ...         ...               ...       ...         ...   \n",
+       "3531714   3531715        8503      SANTA TERESA         2          26   \n",
+       "3531715   3531716        8503      SANTA TERESA         2          26   \n",
+       "3531716   3531717        8503      SANTA TERESA         2          26   \n",
+       "3531717   3531718        8503      SANTA TERESA         1           5   \n",
+       "3531718   3531719        8503      SANTA TERESA         1           5   \n",
+       "\n",
+       "         PreCCons  PreCResto      PreChip          PreCedCata  \\\n",
+       "0               0          0  AAA0039RSOM  004405470900000000   \n",
+       "1               0          0  AAA0039RSPA           43S 46 40   \n",
+       "2               0          0  AAA0039RSPA           43S 46 40   \n",
+       "3               0          0  AAA0039RSPA           43S 46 40   \n",
+       "4               0          0  AAA0039RSPA           43S 46 40   \n",
+       "...           ...        ...          ...                 ...   \n",
+       "3531714         1       7012  AAA0158WCPP  008503022600107012   \n",
+       "3531715         1       8001  AAA0158WCRU  008503022600108001   \n",
+       "3531716         1       8002  AAA0158WCSK  008503022600108002   \n",
+       "3531717         8       2004  AAA0108FLZE        168 27 9 297   \n",
+       "3531718         8       3001  AAA0108FMAF        168 27 9 330   \n",
+       "\n",
+       "                               PreNupre  ...  PreBMobili PreBCons PreCTamano  \\\n",
+       "0        110010144160500470009000000000  ...         NaN      NaN        NaN   \n",
+       "1        110010144160500480001000000000  ...       332.0    341.0      412.0   \n",
+       "2        110010144160500480001000000000  ...       332.0    341.0      412.0   \n",
+       "3        110010144160500480001000000000  ...       332.0    341.0      412.0   \n",
+       "4        110010144160500480001000000000  ...       332.0    341.0      412.0   \n",
+       "...                                 ...  ...         ...      ...        ...   \n",
+       "3531714  110010185010300020026901070012  ...       332.0    342.0      412.0   \n",
+       "3531715  110010185010300020026901080001  ...       332.0    342.0      412.0   \n",
+       "3531716  110010185010300020026901080002  ...       332.0    342.0      412.0   \n",
+       "3531717  110010185010300010005908020004  ...       332.0    342.0      412.0   \n",
+       "3531718  110010185010300010005908030001  ...       332.0    342.0      412.0   \n",
+       "\n",
+       "        PreCEnchap PreCMobili PreCConse PreCIndus PreACercha PreClCons  \\\n",
+       "0              NaN        NaN       NaN       NaN        NaN         R   \n",
+       "1            424.0      432.0     441.0       NaN        NaN         R   \n",
+       "2            424.0      432.0     441.0       NaN        NaN         R   \n",
+       "3            424.0      432.0     441.0       NaN        NaN         R   \n",
+       "4            424.0      432.0     441.0       NaN        NaN         R   \n",
+       "...            ...        ...       ...       ...        ...       ...   \n",
+       "3531714      424.0      432.0     442.0       NaN        NaN         R   \n",
+       "3531715      424.0      432.0     442.0       NaN        NaN         R   \n",
+       "3531716      424.0      432.0     442.0       NaN        NaN         R   \n",
+       "3531717      423.0      433.0     442.0       NaN        NaN         R   \n",
+       "3531718      423.0      433.0     442.0       NaN        NaN         R   \n",
+       "\n",
+       "          Barmanpre  \n",
+       "0        4405047009  \n",
+       "1        4405048001  \n",
+       "2        4405048001  \n",
+       "3        4405048001  \n",
+       "4        4405048001  \n",
+       "...             ...  \n",
+       "3531714  8503002026  \n",
+       "3531715  8503002026  \n",
+       "3531716  8503002026  \n",
+       "3531717  8503001005  \n",
+       "3531718  8503001005  \n",
+       "\n",
+       "[3531719 rows x 52 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_predios"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "6e201022",
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +462,7 @@
        "35.01668179340333"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -107,7 +505,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "432c2395",
+   "id": "3bcf4b4c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +529,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b26d3919",
+   "id": "236eab9a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +544,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "219a2084",
+   "id": "7fb310ad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +554,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "d0682f83",
+   "id": "2557a134",
    "metadata": {},
    "outputs": [],
    "source": [
