README update image

--- a/DashBoard_App.ipynb
+++ b/DashBoard_App.ipynb
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "c9988bfd-b0b8-43ff-96de-77b15839ceac",
    "metadata": {},
    "outputs": [
@@ -396,7 +396,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dash app running on http://127.0.0.1:8050/\n"
+      "Dash app running on http://127.0.0.1:8050/\n",
+      "Reading data...\n",
+      "Fitting model...\n",
+      "Estimating RC values...\n",
+      "\n",
+      "This will take some time...\n",
+      "\n",
+      "\n",
+      "Rasterizing point data and plotting map...\n",
+      "Done :)\n"
      ]
     }
    ],
