--- a/DashBoard_App.ipynb
+++ b/DashBoard_App.ipynb
@@ -164,7 +164,9 @@
     "    \n",
     "    RMSE = RMSE.to_dict('records')\n",
     "    \n",
-    "    exists = path.exists('Regression results/Rn_estimations_'+model+var_ID+'.geojson')\n",
+    "    exists = path.exists('Regression results/RC_regression_estimations'+model+var_ID+'.tif')\n",
+    "    \n",
+    "    print('Regression results/RC_regression_estimations'+model+var_ID+'.tif')\n",
     "    \n",
     "    if exists:\n",
     "        msg = 'Fitting model...\\nEstimating RC values...'\n",
@@ -187,7 +189,8 @@
     "                     ):\n",
     "    \n",
     "    if exists:\n",
-    "        gdf = gpd.read_file('Regression results/Rn_estimations_'+name_file+'.geojson')\n",
+    "        exists = exists\n",
+    "        # gdf = gpd.read_file('Regression results/Rn_estimations_'+name_file+'.geojson')\n",
     "    else:\n",
     "        df_RnModel = pd.read_table(dataset_for_estimation_path, delimiter = '\\t')\n",
     "\n",
@@ -233,51 +236,52 @@
     "    \n",
     "    msg = 'Rasterizing point data and plotting map...'\n",
     "    \n",
-    "    return gdf, msg\n",
+    "    return exists, msg\n",
     "\n",
-    "def rasterize(gdf,\n",
-    "              name_file,\n",
+    "def rasterize(name_file,\n",
+    "              exists,\n",
     "              crs = '3116', \n",
     "              res = 250):\n",
     "        \n",
+    "    if not exists:\n",
+    "        gdf = gpd.read_file('Regression results/Rn_estimations_'+name_file+'.geojson')\n",
+    "        ds_points = ogr.Open('Regression results/Rn_estimations_'+name_file+'.geojson')\n",
+    "\n",
+    "        ds_points\n",
+    "        lyr = ds_points.GetLayer() \n",
+    "\n",
+    "        driver = gdal.GetDriverByName('GTiff')\n",
+    "\n",
+    "        spatref = osr.SpatialReference()\n",
+    "        spatref.ImportFromEPSG(int(crs))\n",
+    "        wkt = spatref.ExportToWkt()\n",
+    "\n",
+    "        outfn = 'Regression results/RC_regression_estimations'+name_file+'.tif'\n",
+    "        nbands = 1\n",
+    "        nodata = 0\n",
+    "        xres = res\n",
+    "        yres = (-1)*res\n",
+    "\n",
+    "        xmin = gdf.geometry.x.min()\n",
+    "        xmax = gdf.geometry.x.max() \n",
+    "        ymin = gdf.geometry.y.min()\n",
+    "        ymax = gdf.geometry.y.max()\n",
+    "        dtype = gdal.GDT_Float64\n",
+    "\n",
+    "        xsize = abs(int((xmax - xmin) / xres))\n",
+    "        ysize = abs(int((ymax - ymin) / yres))\n",
+    "\n",
+    "        ds = driver.Create(outfn, xsize, ysize, nbands, dtype)\n",
+    "        ds.SetProjection(wkt)\n",
+    "        ds.SetGeoTransform([xmin, xres, 0, ymax, 0, yres])\n",
+    "        ds.GetRasterBand(1).Fill(0)\n",
+    "        ds.FlushCache()\n",
+    "\n",
+    "        gdal.RasterizeLayer(ds, [1], lyr, options=['ATTRIBUTE=Reg', 'ALL_TOUCHED=TRUE'])\n",
+    "        ds.GetRasterBand(1).SetNoDataValue(nodata) \n",
+    "        ds = None\n",
     "    \n",
-    "    ds_points = ogr.Open('Regression results/Rn_estimations_'+name_file+'.geojson')\n",
-    "    \n",
-    "    ds_points\n",
-    "    lyr = ds_points.GetLayer() \n",
-    "\n",
-    "    driver = gdal.GetDriverByName('GTiff')\n",
-    "\n",
-    "    spatref = osr.SpatialReference()\n",
-    "    spatref.ImportFromEPSG(int(crs))\n",
-    "    wkt = spatref.ExportToWkt()\n",
-    "\n",
-    "    outfn = 'Regression results/RC_regression_estimations.tif'\n",
-    "    nbands = 1\n",
-    "    nodata = 0\n",
-    "    xres = res\n",
-    "    yres = (-1)*res\n",
-    "\n",
-    "    xmin = gdf.geometry.x.min()\n",
-    "    xmax = gdf.geometry.x.max() \n",
-    "    ymin = gdf.geometry.y.min()\n",
-    "    ymax = gdf.geometry.y.max()\n",
-    "    dtype = gdal.GDT_Float64\n",
-    "\n",
-    "    xsize = abs(int((xmax - xmin) / xres))\n",
-    "    ysize = abs(int((ymax - ymin) / yres))\n",
-    "    \n",
-    "    ds = driver.Create(outfn, xsize, ysize, nbands, dtype)\n",
-    "    ds.SetProjection(wkt)\n",
-    "    ds.SetGeoTransform([xmin, xres, 0, ymax, 0, yres])\n",
-    "    ds.GetRasterBand(1).Fill(0)\n",
-    "    ds.FlushCache()\n",
-    "\n",
-    "    gdal.RasterizeLayer(ds, [1], lyr, options=['ATTRIBUTE=Reg', 'ALL_TOUCHED=TRUE'])\n",
-    "    ds.GetRasterBand(1).SetNoDataValue(nodata) \n",
-    "    ds = None\n",
-    "    \n",
-    "    rc_array = rioxarray.open_rasterio('Regression results/RC_regression_estimations.tif', band_as_variable=True)\n",
+    "    rc_array = rioxarray.open_rasterio('Regression results/RC_regression_estimations'+name_file+'.tif', band_as_variable=True)\n",
     "    rc_df = rc_array.to_dataframe().reset_index()\n",
     "    rc_df[rc_df['band_1'] == 0] = np.nan\n",
     "    rc_df = rc_df.dropna()\n",
@@ -288,7 +292,7 @@
     "    rc_pol = gpd.GeoDataFrame(rc_buf).join(rc_df).iloc[:,[1,0]]\n",
     "    rc_pol.columns = ['RC','geometry']\n",
     "    \n",
-    "    x_c = rc_pol.dissolve().centroid.x.mean()  # Error is not rlevant since we only will use this to center the map\n",
+    "    x_c = rc_pol.dissolve().centroid.x.mean()\n",
     "    y_c = rc_pol.dissolve().centroid.y.mean()\n",
     "    \n",
     "    msg = 'Done :)'\n",
@@ -388,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "id": "c9988bfd-b0b8-43ff-96de-77b15839ceac",
    "metadata": {},
    "outputs": [
@@ -398,12 +402,9 @@
      "text": [
       "Dash app running on http://127.0.0.1:8050/\n",
       "Reading data...\n",
+      "Regression results/RC_regression_estimationsLog_LinearBALLT.tif\n",
       "Fitting model...\n",
       "Estimating RC values...\n",
-      "\n",
-      "This will take some time...\n",
-      "\n",
-      "\n",
       "Rasterizing point data and plotting map...\n",
       "Done :)\n"
      ]
@@ -623,15 +624,23 @@
     "                         autoClose = 10*1000,\n",
     "                         icon=DashIconify(icon=\"akar-icons:circle-check\"),\n",
     "                        )\n",
+    "        # X, y, msg = read_data(vars_)\n",
+    "        # print(msg)\n",
+    "        # imp, RMSE, mod, exists, name_file, msg = fit_model(X,y, model = model)\n",
+    "        # print(msg)\n",
+    "        # gdf, msg = EstimatingValues(mod, model, X, exists, name_file)\n",
+    "        # print(msg)\n",
+    "        # rc_pol, y_c, x_c, msg = rasterize(gdf, name_file)\n",
+    "        # print(msg)\n",
     "        X, y, msg = read_data(vars_)\n",
     "        print(msg)\n",
     "        imp, RMSE, mod, exists, name_file, msg = fit_model(X,y, model = model)\n",
     "        print(msg)\n",
-    "        gdf, msg = EstimatingValues(mod, model, X, exists, name_file)\n",
+    "        exists, msg = EstimatingValues(mod, model, X, exists, name_file)\n",
     "        print(msg)\n",
-    "        rc_pol, y_c, x_c, msg = rasterize(gdf, name_file)\n",
+    "        rc_pol, y_c, x_c, msg = rasterize(name_file, exists)\n",
     "        print(msg)\n",
-    "        \n",
+    "\n",
     "        fig = px.choropleth_mapbox(rc_pol,\n",
     "                                    geojson=rc_pol.geometry,\n",
     "                                    locations = rc_pol.index,\n",
@@ -659,8 +668,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "c50ee3a1-bcf9-4771-8617-2eef32cd1e3c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "exists = path.exists('Regression results/Rn_estimations_'+'model'+'var_ID'+'.tiff')\n",
+    "if exists:\n",
+    "    print('si')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "720a4bea-c39a-48b7-9407-7097942a5b48",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reading data...\n",
+      "Regression results/RC_regression_estimationsLog_LinearBALLT.tif\n",
+      "Fitting model...\n",
+      "Estimating RC values...\n",
+      "Rasterizing point data and plotting map...\n",
+      "Done :)\n"
+     ]
+    }
+   ],
+   "source": [
+    "X, y, msg = read_data(['Basement_dummy','Age_1980','Lito_Fans','Lito_Shales','Temperature'])\n",
+    "print(msg)\n",
+    "imp, RMSE, mod, exists, name_file, msg = fit_model(X,y, model = 'Log_Linear')\n",
+    "print(msg)\n",
+    "exists, msg = EstimatingValues(mod,'Log_Linear', X, exists, name_file)\n",
+    "print(msg)\n",
+    "rc_pol, y_c, x_c, msg = rasterize(name_file, exists)\n",
+    "print(msg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "34b3f82e-c46f-47ce-bfba-6252f3b20750",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "00f3bb10-2f23-41e6-9254-b23b3a241aa1",
    "metadata": {},
    "outputs": [],
    "source": []
