--- a/DashBoard_App.ipynb
+++ b/DashBoard_App.ipynb
@@ -165,9 +165,7 @@
     "    RMSE = RMSE.to_dict('records')\n",
     "    \n",
     "    exists = path.exists('Regression results/RC_regression_estimations'+model+var_ID+'.tif')\n",
-    "    \n",
-    "    print('Regression results/RC_regression_estimations'+model+var_ID+'.tif')\n",
-    "    \n",
+    "        \n",
     "    if exists:\n",
     "        msg = 'Fitting model...\\nEstimating RC values...'\n",
     "    else:\n",
@@ -190,7 +188,6 @@
     "    \n",
     "    if exists:\n",
     "        exists = exists\n",
-    "        # gdf = gpd.read_file('Regression results/Rn_estimations_'+name_file+'.geojson')\n",
     "    else:\n",
     "        df_RnModel = pd.read_table(dataset_for_estimation_path, delimiter = '\\t')\n",
     "\n",
@@ -281,19 +278,22 @@
     "        ds.GetRasterBand(1).SetNoDataValue(nodata) \n",
     "        ds = None\n",
     "    \n",
-    "    rc_array = rioxarray.open_rasterio('Regression results/RC_regression_estimations'+name_file+'.tif', band_as_variable=True)\n",
-    "    rc_df = rc_array.to_dataframe().reset_index()\n",
-    "    rc_df[rc_df['band_1'] == 0] = np.nan\n",
-    "    rc_df = rc_df.dropna()\n",
-    "    rc_df = gpd.GeoDataFrame(rc_df['band_1'], geometry=gpd.points_from_xy(rc_df.x, rc_df.y))\n",
-    "    rc_df = rc_df.set_crs(crs)\n",
-    "    rc_buf = rc_df.buffer(int(rc_array.coords.get('x')[1] - rc_array.coords.get('x')[0])/2, cap_style=3, resolution = 4)\n",
-    "    rc_buf = rc_buf.to_crs('4326')\n",
-    "    rc_pol = gpd.GeoDataFrame(rc_buf).join(rc_df).iloc[:,[1,0]]\n",
-    "    rc_pol.columns = ['RC','geometry']\n",
-    "    \n",
-    "    x_c = rc_pol.dissolve().centroid.x.mean()\n",
-    "    y_c = rc_pol.dissolve().centroid.y.mean()\n",
+    "        rc_array = rioxarray.open_rasterio('Regression results/RC_regression_estimations'+name_file+'.tif', band_as_variable=True)\n",
+    "        rc_df = rc_array.to_dataframe().reset_index()\n",
+    "        rc_df[rc_df['band_1'] == 0] = np.nan\n",
+    "        rc_df = rc_df.dropna()\n",
+    "        rc_df = gpd.GeoDataFrame(rc_df['band_1'], geometry=gpd.points_from_xy(rc_df.x, rc_df.y))\n",
+    "        rc_df = rc_df.set_crs(crs)\n",
+    "        rc_buf = rc_df.buffer(int(rc_array.coords.get('x')[1] - rc_array.coords.get('x')[0])/2, cap_style=3, resolution = 4)\n",
+    "        rc_buf = rc_buf.to_crs('4326')\n",
+    "        rc_pol = gpd.GeoDataFrame(rc_buf).join(rc_df).iloc[:,[1,0]]\n",
+    "        rc_pol.columns = ['RC','geometry']\n",
+    "        \n",
+    "        rc_pol.to_file('Regression results/Rn_estimations_'+name_file+'_pol.geojson', driver=\"GeoJSON\")    \n",
+    "    else: \n",
+    "        rc_pol =  gpd.read_file('Regression results/Rn_estimations_'+name_file+'_pol.geojson')\n",
+    "        x_c = rc_pol.dissolve().centroid.x.mean()\n",
+    "        y_c = rc_pol.dissolve().centroid.y.mean()\n",
     "    \n",
     "    msg = 'Done :)'\n",
     "    \n",
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "c9988bfd-b0b8-43ff-96de-77b15839ceac",
    "metadata": {},
    "outputs": [
@@ -402,11 +402,12 @@
      "text": [
       "Dash app running on http://127.0.0.1:8050/\n",
       "Reading data...\n",
-      "Regression results/RC_regression_estimationsLog_LinearBALLT.tif\n",
       "Fitting model...\n",
       "Estimating RC values...\n",
-      "Rasterizing point data and plotting map...\n",
-      "Done :)\n"
+      "\n",
+      "This will take some time...\n",
+      "\n",
+      "\n"
      ]
     }
    ],
@@ -515,9 +516,11 @@
     "        PreventUpdate\n",
     "    elif lst_clicks_rstrt[-1] > lst_clicks_rstrt[-2]:\n",
     "        for f in listdir('Regression results'):\n",
+    "            if re.search('^RC_regression_estimations', f):\n",
+    "                remove(path.join('Regression results', f))\n",
     "            if re.search('^Rn_estimations', f):\n",
     "                remove(path.join('Regression results', f))\n",
-    "    \n",
+    "                \n",
     "    return ''\n",
     "\n",
     "\n",
@@ -624,14 +627,6 @@
     "                         autoClose = 10*1000,\n",
     "                         icon=DashIconify(icon=\"akar-icons:circle-check\"),\n",
     "                        )\n",
-    "        # X, y, msg = read_data(vars_)\n",
-    "        # print(msg)\n",
-    "        # imp, RMSE, mod, exists, name_file, msg = fit_model(X,y, model = model)\n",
-    "        # print(msg)\n",
-    "        # gdf, msg = EstimatingValues(mod, model, X, exists, name_file)\n",
-    "        # print(msg)\n",
-    "        # rc_pol, y_c, x_c, msg = rasterize(gdf, name_file)\n",
-    "        # print(msg)\n",
     "        X, y, msg = read_data(vars_)\n",
     "        print(msg)\n",
     "        imp, RMSE, mod, exists, name_file, msg = fit_model(X,y, model = model)\n",
@@ -664,48 +659,6 @@
     "if __name__ == '__main__':\n",
     "    app.run_server(debug=True)\n",
     "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "c50ee3a1-bcf9-4771-8617-2eef32cd1e3c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "exists = path.exists('Regression results/Rn_estimations_'+'model'+'var_ID'+'.tiff')\n",
-    "if exists:\n",
-    "    print('si')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "720a4bea-c39a-48b7-9407-7097942a5b48",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Reading data...\n",
-      "Regression results/RC_regression_estimationsLog_LinearBALLT.tif\n",
-      "Fitting model...\n",
-      "Estimating RC values...\n",
-      "Rasterizing point data and plotting map...\n",
-      "Done :)\n"
-     ]
-    }
-   ],
-   "source": [
-    "X, y, msg = read_data(['Basement_dummy','Age_1980','Lito_Fans','Lito_Shales','Temperature'])\n",
-    "print(msg)\n",
-    "imp, RMSE, mod, exists, name_file, msg = fit_model(X,y, model = 'Log_Linear')\n",
-    "print(msg)\n",
-    "exists, msg = EstimatingValues(mod,'Log_Linear', X, exists, name_file)\n",
-    "print(msg)\n",
-    "rc_pol, y_c, x_c, msg = rasterize(name_file, exists)\n",
-    "print(msg)"
    ]
   },
   {
